# OpenEncompass

./: .gitignore  .pre-commit-config.yaml  README.md  debug_cow.py  debug_local_search.py  mypy.ini  pyproject.toml  requirements.txt  run_benchmark.py  run_translation.py  test_generator_pickle.py
benchmarks/: ab_mcts_benchmark.py  arc_hypothesis.py  benchmark_suite.py  code_translation.py  gsm8k.py  gsm8k_full.py  reflexion.py  research_benchmark.py  run_gsm8k_ollama.py  simple_math.py
benchmarks/datasets/: gsm8k_local.py  mbpp_local.py
core/: compiler.py  cow_proxy.py  decorators.py  exceptions.py  llm.py  safety.py  search_space.py  signals.py
encompass/: __init__.py  std.py
encompass/llm/: __init__.py  caching.py  ollama.py  openai.py
encompass/samplers/: base.py  llm.py  openai.py
examples/: basic_agent.py  translation_agent.py  with_arguments.py
examples/code_translation/: README.md  base_translation_agent.py  encompass_translation_agent.py  run_experiment.py
examples/code_translation/complex_experiment/: encompass_agent.py  git_utils.py  run_all_strategies.py  validation.py  vanilla_agent.py
examples/code_translation/expected_output/: __init__.py  basic_tokenizer.py  byte_utils.py  token_pair.py  token_utils.py  tokenizer.py
examples/code_translation/simple_experiment/: baseline_vanilla.py  encompass_version.py  run_experiment.py  (+1 more)
examples/hypothesis_search/: base_hypothesis_agent.py  encompass_hypothesis_agent.py  tasks.py
examples/reflexion/: encompass_reflexion_agent.py
runtime/: costs.py  engine.py  node.py
search/: __init__.py  ab_mcts.py  bayesian.py  strategies.py
storage/: base.py  filesystem.py
tests/: test_ab_mcts.py  test_caching.py  test_compiler.py  test_compiler_control_flow.py  test_compiler_loops.py  test_core.py  test_costs.py  test_cow_proxy.py  test_cps_engine.py  test_e2e.py  test_implicit_yield.py  test_local_search.py  test_nested.py  test_safety.py  test_try_except.py  test_tuple_unpack.py
tests/performance/: test_deep_search_scale.py
validation/: debug_trace.py  deep_stress_test.py  depth_analysis.py  diagnose_depth.py  inspect_states.py  simple_deep_test.py  validate_framework.py  working_deep_test.py
visualization/: exporter.py
(+2 files in other folders)
